--- a/index.html
+++ b/index.html
@@ -170,18 +170,128 @@ MAKEUP <span>COLLECTION</span></h2>
 	
 </section>
 	
-
 <section id="get">
-		<div class="container">
-		<div class="row">
-			
+	<div class="container">
+	<div class="row">
+		<article class="col-md-4 col-sm-4 col-xs-12">
+		<h5>$200+Value <b>for</b> ONLY $49.99 USD</h5>
+		<h6>EACH SEASON</h6>
 		
-			
-		</div>
+		
+		
+		</article>
+		
+		
+		<article class="col-md-4 col-sm-4 col-xs-12">
+			<a class="btn btn-light getbtn" href="">GET THE BOX</a>
+		</article>
+		
+		<article class="col-md-4 col-sm-4 col-xs-12">
+			<h4>SHIPPING IS FREE</h4>
+		</article>
+		
+		
+		
+		
+		
+	</div>
+	</div>
+
 	
-		</div>
+</section>
+
+<section id="products">
+	<div class="container">
+	<div class="row">
+		<article class="col-md-4 col-sm-4 col-xs-12">
+		<img src="img/product 4.png" class="container-fluid" alt="basemac" width="300px">
+		<h5>M·A·C Cosmetics Studio Fix Fluid SPF 15</h5>
+		<p>$29.99</p>
+			
+		<p>
+		<fieldset class="rating">
+    <input type="radio" id="star50" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+    <input type="radio" id="star4half0" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+    <input type="radio" id="star40" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+    <input type="radio" id="star3half0" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+    <input type="radio" id="star30" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+    <input type="radio" id="star2half0" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+    <input type="radio" id="star20" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+    <input type="radio" id="star1half0" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+    <input type="radio" id="star10" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+    <input type="radio" id="starhalf0" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+</fieldset>
+		</p>
+		<br>
+		<br>
 		
-</section>		
+		<a class="btn btn-light productbtn" href="">Add to Cart</a>
+		</article>
+		
+		<article class="col-md-4 col-sm-4 col-xs-12">
+		<img src="img/product.jpg" class="container-fluid" alt="crema" width="200px">
+		<h5>Benefit Cosmetics Hello Happy Soft Blur Foundation</h5>
+		<p>$29.00</p>
+			
+			<p>
+		<fieldset class="rating">
+    <input type="radio" id="star52" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+    <input type="radio" id="star4half2" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+    <input type="radio" id="star42" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+    <input type="radio" id="star3half2" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+    <input type="radio" id="star32" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+    <input type="radio" id="star2half2" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+    <input type="radio" id="star22" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+    <input type="radio" id="star1half22" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+    <input type="radio" id="star12" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+    <input type="radio" id="starhalf2" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+</fieldset>
+		</p>
+		<br>
+		<br>
+			
+		<a class="btn btn-light productbtn" href="">Add to Cart</a>
+		</article>
+		
+		
+		<article class="col-md-4 col-sm-4 col-xs-12">
+		<img src="img/product 2.jpg" class="container-fluid" alt="crema">
+		<h5>M·A·C Cosmetics Studio Fix Powder Plus Foundation</h5>
+		<p>$29.99</p>
+			
+			<p>
+		<fieldset class="rating">
+    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+</fieldset>
+		</p>
+		<br>
+		<br>
+			
+			
+		<a class="btn btn-light productbtn" href="">Add to Cart</a>
+		</article>
+		
+		
+	</div>
+	
+	</div>
+	
+	
+</section>
+		
+			
+		
+		
+		
 		
 		
 <script src="js/jquery.min.js"></script>
