--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ MAKEUP <span>COLLECTION</span></h2>
 	<div class="row">
 		<article class="col-md-4 col-sm-4 col-xs-12">
 		<img src="img/product 4.png" class="container-fluid" alt="basemac" width="300px">
-		<h5>M·A·C Cosmetics Studio Fix Fluid SPF 15</h5>
+		<h5>M·A·C Cosmetics Studio Fix  Long Lasting Fluid SPF 15</h5>
 		<p>$29.99</p>
 			
 		<p>
